--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,11 @@
 <resources>
-    <string name="app_name">final_groupProject</string>
+    <string name="app_name">TicketMaster event search</string>
+    <string name="eventTicketSearch">Event Tickets Search</string>
+    <string name="CityName">City</string>
+    <string name="Radius">Radius</string>
+    <string name="instructions">Instructions: Type city you want to look at and choose size of area (radius) you like to see</string>
+    <string name="author_aleksei_surkov">Author: Aleksei Surkov</string>
+    <string name="furtherHelp">If you have any questions regarding this app please contact the author</string>
+    <string name="version">Version 1.0</string>
+    <string name="TicketMastereventsearch">TicketMaster event search</string>
 </resources>
